--- a/app/src/main/res/layout/row_stats.xml
+++ b/app/src/main/res/layout/row_stats.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="model"
-            type="com.shape.app.ui.stats.StatsItemViewModel" />
+            type="com.shape.app.stats.model.StatsItemViewModel" />
     </data>
 
     <android.support.v7.widget.CardView
